<resources>
    <string name="app_name">Sholat Sunnah</string>
    <string name="tahajut">tahajut</string>
    <string name="witir">witir</string>
    <string name="rawatib">rawatib</string>
    <string name="dhuha">dhuha</string>
    <string name="istikoroh">istikoroh</string>
    <string name="tahiyyatulmasjid">tahiyyatulmasjid</string>
    <string name="sholatsyuruq">sholatsyuruq</string>
</resources>
